tried to fix the modal for IE11 but it is a implementation problem in IE so found a safety workaround to avoid overflow and let's wait for them to fix that

--- a/app/styles/css/_modals.scss
+++ b/app/styles/css/_modals.scss
@@ -20,6 +20,10 @@
     align-items: center;
     justify-content: center;
 
+    // safety net for IE11 that can't properly manage nested flex containers
+    // see http://connect.microsoft.com/IE/feedback/details/802625/min-height-and-flexbox-flex-direction-column-dont-work-together-in-ie-10-11-preview
+    overflow: auto;
+
     transition: opacity $transitionDuration linear;
 
     // shows the overlay
@@ -50,6 +54,8 @@
   }
 
   .mt-modal__container {
+    overflow: hidden;
+
     background-color: $lightTextColor;
     border-radius: 2px;
     color: $secondaryBgColor;
@@ -60,6 +66,7 @@
   }
 
   .mt-modal__title {
+    flex: none;
     padding: $unitVerticalPadding / 2 1rem;
 
     color: $baseBgColor;
@@ -69,7 +76,8 @@
   }
 
   .mt-modal__content {
-    flex: 1; // wil shrink or expand to match the available height
+    // use the initial value for flex (0 1 auto)
+    // will shrink to match the available height or expand to give enough place to the content
     padding: 0 1rem;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
@@ -78,6 +86,7 @@
   }
 
   .mt-modal__commands {
+    flex: none;
     padding: 1rem;
 
     display: flex;
